k8s/tier1-ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-service
  labels:
    app: ingress-controller
spec:
  selector:
    app: ingress-controller
  ports:
  - port: 80
    targetPort: 80
